Add show more btn

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
     <section class="shop container">
         <h2 class="shop__title">Shop</h2>
-
-        <div class="shop-content">
-            
+        <div class="shop-content"></div>
+        <div class="shop__more">
+            <button class="shop__more-btn" type="button">Show More</button>
         </div>
     </section>
 
